--- a/tweet-tweet/src/app/app.component.html
+++ b/tweet-tweet/src/app/app.component.html
@@ -1,6 +1,6 @@
-<tweet-create></tweet-create>
+<!-- <tweet-create></tweet-create>
 <app-post></app-post>
 <app-trend></app-trend>
 <side-nav>
-</side-nav>
+</side-nav> -->
 <router-outlet></router-outlet>
