--- a/tweet-tweet/src/app/sign-up/sign-up.component.css
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.css
@@ -1,10 +1,11 @@
 .card{
     background-color: white;
     border: none;
+    height: 95vh;
 }
 
 .card-body{
-    padding: 10% 30%;
+    padding: 0% 30%;
 }
 
 #myButton{
