--- a/tweet-tweet/src/app/welcome-page/welcome-page.component.html
+++ b/tweet-tweet/src/app/welcome-page/welcome-page.component.html
@@ -19,9 +19,9 @@
       <div class="card front-bg">
         <div class="container text-center">
           <div class="card-body card-content-left">
-            <h5><span><i class="fa fa-fw fa-search mt-3"></i></span>Follow your interests</h5>
-            <h5><span><i class="fa fa-fw fa-user mt-3"></i></span>Hear what people are talking about</h5>
-            <h5><span><i class="fa fa-fw fa-comment mt-3"></i></span>Join the conversation</h5>
+            <h3><span><i class="fa fa-fw fa-search mt-3"></i></span>Follow your interests</h3>
+            <h3><span><i class="fa fa-fw fa-user mt-3"></i></span>Hear what people are talking about</h3>
+            <h3><span><i class="fa fa-fw fa-comment mt-3"></i></span>Join the conversation</h3>
             <!-- <a class="text-white font-weight-bolder" href="#"><i class="fa fa-fw fa-search"></i> Follow your interests</a>
           <br>
           <a class="text-white font-weight-bolder" href="#"><i class="fa fa-fw fa-comment mt-3"></i> Hear what people are talking about</a>
@@ -33,14 +33,14 @@
       <div class="card bg6">
         <div class="container text-center">
           <div class="card-body card-content-right">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <h1 class="">See what's happening in the world right now</h1>
-            <h3 class="right-content">Join Twitter Today</h3>
+            <i class="fa fa-twitter m-4" aria-hidden="true"></i>
+            <h1 class="font-weight-bolder mt-3">See what's happening in the <br>world right now</h1>
+            <h1 class="right-content mt-3">Join Twitter Today</h1>
             <div class="text-center buttons-design">
               <button class="btn btn-outline-primary btn-primary text-white text-center button-style mt-5"><b>Sign
                   up</b></button>
               <br>
-              <button class="btn text-center button-style-new mt-2"><b>Log in</b></button>
+              <button class="btn text-center button-style-new mt-3"><b>Log in</b></button>
             </div>
           </div>
         </div>
