Service integrated, fixed apis, feed section gonna complete, token added in local storage

--- a/tweet-tweet/src/app/home/components/post/post.component.scss
+++ b/tweet-tweet/src/app/home/components/post/post.component.scss
@@ -20,7 +20,7 @@
     justify-content: center;
     height: 28rem;
     border-radius: 1rem;
-    background: url('https://material.angular.io/assets/img/examples/shiba2.jpg');
+    background: url('https://images.unsplash.com/photo-1523497894237-6809839f72dd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=282&q=80');
     background-size: cover;
     margin: 0 auto;
 }
