--- a/tweet-tweet/src/app/welcome-page/welcome-page.component.html
+++ b/tweet-tweet/src/app/welcome-page/welcome-page.component.html
@@ -37,10 +37,10 @@
             <h1 class="font-weight-bolder mt-3">See what's happening in the <br>world right now</h1>
             <h1 class="right-content mt-3">Join Twitter Today</h1>
             <div class="text-center buttons-design">
-              <button class="btn btn-outline-primary btn-primary text-white text-center button-style mt-5"><b>Sign
+              <button class="btn btn-outline-primary btn-primary text-white text-center button-style mt-5" [routerLink]="['signup']"><b>Sign
                   up</b></button>
               <br>
-              <button class="btn text-center button-style-new mt-3"><b>Log in</b></button>
+              <button class="btn text-center button-style-new mt-3"  [routerLink]="['login']"><b>Log in</b></button>
             </div>
           </div>
         </div>
