--- a/tweet-tweet/src/app/profile/profile.component.scss
+++ b/tweet-tweet/src/app/profile/profile.component.scss
@@ -63,7 +63,6 @@
     text-decoration: none;
     color: rgba(29,161,242,1.00);}
   .block-menu ul li a {
-    float: left;
     font-size: 15px;
     font-weight: bolder;
     height: 50px;
@@ -100,19 +99,19 @@
     margin:0;
     padding:20px ;
     }
-.form-control {
-    padding:0px 25px;
-    margin-top: 5px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-    color: gray;
-    font-size: 17px;
-    font-weight: 400;
-    border: 1px solid rgba(29,161,242,1.00);
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    height:40px;
-    border-radius: 30px!important;
-}
+// .form-control {
+//     padding:0px 25px;
+//     margin-top: 5px;
+//     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+//     color: gray;
+//     font-size: 17px;
+//     font-weight: 400;
+//     border: 1px solid rgba(29,161,242,1.00);
+//     -webkit-box-shadow: none;
+//     box-shadow: none;
+//     height:40px;
+//     border-radius: 30px!important;
+// }
 .right-side-nav-2{
     background-color: rgba(29,161,242,1.00);
     border-radius: 10px;;
