--- a/tweet-tweet/src/app/welcome-page/welcome-page.component.html
+++ b/tweet-tweet/src/app/welcome-page/welcome-page.component.html
@@ -22,11 +22,6 @@
             <h2><span><i class="fa fa-fw fa-search mt-3"></i></span>Follow your interests</h2>
             <h2><span><i class="fa fa-fw fa-user mt-3"></i></span>Hear what people are talking about</h2>
             <h2><span><i class="fa fa-fw fa-comment mt-3"></i></span>Join the conversation</h2>
-            <!-- <a class="text-white font-weight-bolder" href="#"><i class="fa fa-fw fa-search"></i> Follow your interests</a>
-          <br>
-          <a class="text-white font-weight-bolder" href="#"><i class="fa fa-fw fa-comment mt-3"></i> Hear what people are talking about</a>
-          <br>
-          <a class="text-white font-weight-bolder" href="#"><i class="fa fa-fw fa-user mt-3"></i>Join the conversation</a> -->
           </div>
         </div>
       </div>
@@ -37,10 +32,11 @@
             <h1 class="font-weight-bolder mt-3">See what's happening in the <br>world right now</h1>
             <h1 class="right-content mt-3">Join Twitter Today</h1>
             <div class="text-center buttons-design">
-              <button class="btn btn-outline-primary btn-primary text-white text-center button-style mt-5" [routerLink]="['signup']"><b>Sign
+              <button class="btn btn-outline-primary btn-primary text-white text-center button-style mt-5"
+                [routerLink]="['signup']"><b>Sign
                   up</b></button>
               <br>
-              <button class="btn text-center button-style-new mt-3"  [routerLink]="['login']"><b>Log in</b></button>
+              <button class="btn text-center button-style-new mt-3" [routerLink]="['login']"><b>Log in</b></button>
             </div>
           </div>
         </div>
