--- a/tweet-tweet/src/app/sign-up/sign-up.component.css
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.css
@@ -45,12 +45,13 @@ h1{
 
 }
 
-.text:focus{
-    color: rgba(29,161,242,1.00);
+.inputBox:focus{
+    border-color: rgba(29,161,242,1.00)  !important;
 }
 
 .form-group{
     background-color: rgb(245, 248, 250);
+    margin-bottom: 0rem;
 }
 
 .form-control:focus {
@@ -58,3 +59,17 @@ h1{
     box-shadow: none;
 
   }
+
+  .smallText{
+      visibility: hidden;
+  }
+
+  .warning{
+    border-bottom: 2px solid rgb(224, 36, 94);
+    
+
+  }
+  /* .warning:focus{
+      border-bottom: 2px solid rgb(224, 36, 94);
+  } */
+
