--- a/tweet-tweet/src/app/welcome-page/welcome-page.component.css
+++ b/tweet-tweet/src/app/welcome-page/welcome-page.component.css
@@ -1,89 +1,186 @@
-.container-fluid{
-  margin: 0em;
-  padding: 0em;
+.main-row{
+  margin-right: 0;
+  margin-left: 0;
+  padding: 0;
 }
-.front-bg {
+
+i{
+  margin-right: 2rem;
+}
+
+h2{
+  color: white;
+  margin-bottom: 4rem;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+}
+
+h1{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 6rem;
+}
+
+h4{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
+.left-content{
+  display: flex;
   background:url('./tweet.png');
   background-size: cover;
-  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 92vh;
 }
 
-@media only screen and (max-width: 600px) {
-  .front-bg {
-    height: 50vh;
-  }
-}
-
-.bg6 {
-  background-color: white;
+.right-content{
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  height: 100vh;
 }
 
-@media only screen and (max-width: 600px) {
-  .bg6 {
-    margin-top: -14px;
-    height: 50vh;
-  }
-}
-
-.card-content-left {
-  color: white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-}
-.card-content-right {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-  text-align: left;
-  margin-left: 60px;
-}
-
-.card-content-left i {
-  padding-right: 15px;
-  padding-top: 15px;
-  justify-content: left;
-}
-
-.button-style {
-  width: 300px;
-  height: 30px;
-  border-radius: 15px;
-}
-
-.button-style-new {
-  color: rgba(29, 161, 242, 1.00);
-  width: 300px;
-  height: 30px;
-  border-radius: 15px;
-  border-color: #007bff;
-}
-
-@media only screen and (max-width: 600px) {
-  .btn {
-    width: 170px;
-  }
-}
-
-.button-style-new:hover {
-  color: #9bceee;
-  border-radius: 15px;
-  border-color: #007bff;
+.content{
+  display: flex;
+  flex-flow: column;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .fa-twitter {
   text-align: left;
   color: #007bff;
-  font-size: 40px;
+  font-size: 50px;
+  margin: 0;
 }
-.right-content{
-    justify-content: left;
-    align-items: left;
+
+.button-style-signup{
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  padding-bottom: 0.9rem;
+  padding-top: 0.9rem;
+  background-color: #1DA1F2;
 }
-.buttons-design{
-  margin-left: -100px;
+
+.button-style-login{
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  padding-bottom: 0.9rem;
+  padding-top: 0.9rem;
+  color: #1DA1F2;
+  background-color: white;
+}
+
+.button-style-signup:hover{
+  background-color: #18a1d6;
+}
+
+.button-style-login:hover{
+  background-color: beige;
+}
+
+a{
+  color: grey;
+  font-size: 1.4rem;
+  margin-left: 0;
+  margin-right: 0;
+  padding-right: 1rem;
+  padding-left: 0;
+}
+
+.navbar{
+  display: flex;
+  justify-content: center;
+}
+
+nav{
+  margin: 1rem 1rem 0rem 1rem;
+}
+
+.copyright{
+  font-size: small;
+}
+
+@media only screen and (max-width: 750px){
+
+  .left-content{
+    display: flex;
+    background: url('./tweet.png');
+    background-size: cover;
+    flex-flow: column;
+    align-items: flex-start;
+    height: 40%;
+  }
+
+  h2{
+    color: white;
+    margin-bottom: 4rem;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  }
+
+  .tags{
+    display: flex;
+    flex-flow: row;
+  }
+
+  i{
+    color: white;
+    font-size: medium;
+    margin-left: 2rem;
+  }
+
+  .button-style-signup{
+    border-radius: 20px;
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    padding-bottom: 0.9rem;
+    padding-top: 0.9rem;
+    background-color: #1DA1F2;
+  }
+  
+  .button-style-login{
+    border-radius: 20px;
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    padding-bottom: 0.9rem;
+    padding-top: 0.9rem;
+    color: #1DA1F2;
+    background-color: white;
+  }
+
+  .button-style-signup:hover{
+    background-color: #18a1d6;
+  }
+  
+  .button-style-login:hover{
+    background-color: beige;
+  }
+
+  a{
+    color: grey;
+    font-size: 1.3rem;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 1rem;
+    padding-left: 0;
+  }
+
+  .navbar{
+    display: flex;
+    justify-content: center;
+  }
+
+  nav{
+    margin: 2rem 1rem 0rem 1rem;
+  }
+
 }
