--- a/tweet-tweet/src/app/login-page/login-page.component.css
+++ b/tweet-tweet/src/app/login-page/login-page.component.css
@@ -4,15 +4,20 @@
 }
 
 .card-body{
-    padding: 10% 30%;
+    padding: 2% 28%;
 }
 
 #myButton{
-
     width: 100%;
     border-radius: 3rem;
-    
-
+    height: 48px;
+    text-align: center;
+    font-weight: bolder;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    font-size: medium;
+    background-color: rgb(162,207,254);
+    border: none;
+    margin-top: 2%;
 }
 
 .form-control{
@@ -20,26 +25,44 @@
     background-color: rgb(245, 248, 250);
     border-bottom: black;
     border: none ;
-    border-bottom: 2px solid darkslategrey
+    border-bottom: 2px solid darkslategrey;
+    box-shadow: none; 
 }
 .form-control:focus {
     border-color:  rgba(29,161,242,1.00);
-    box-shadow: none;
-       
-  }
-  .form-control:focus .text{
-    color :  rgba(29,161,242,1.00);
-       
-  }
+    box-shadow: none;     
+}
+
+.form-group:focus .text{
+    color : rgba(29,161,242,1.00);
+}
+
 h1{
     text-align: center;
+    color:black;
+    font-weight: bolder;
+    font-size: x-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    padding-bottom: 2%;
+}
+.card-footer a{
+    text-align: center;
+    font-size: medium;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    padding: 4% 1%;
+    color: rgba(29,161,242,1.00);
+    font-weight: lighter;
+    cursor: pointer;
+} 
+.card-footer{
+    display: flex;
+    justify-content: center;
+    word-break: keep-all;
 }
 
 #twitter{
     color: rgba(29,161,242,1.00);
-    font-size: 3rem;
-    
+    font-size: 4rem;
 }
 
 .image{
@@ -54,6 +77,25 @@ h1{
     background-color: rgb(245, 248, 250);
 }
 
-/* a{
-    text-align: center;
-} */
+.message{
+    color:rgb(224,0,0);
+    overflow-wrap: break-word;
+}
+
+@media only screen and (min-device-width: 320px)and (max-width: 1024px) {
+    .card-body{
+        padding: 2% 10%;
+    }
+}
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px){
+    .card-body{
+        padding: 2% 20%;
+    }
+}
+@media screen  and (min-device-width: 1200px) and (max-device-width: 1600px){ 
+    .card-body{
+        padding: 2% 30%;
+    }
+}
+
+
