--- a/tweet-tweet/src/app/sign-up/sign-up.component.html
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.html
@@ -7,7 +7,7 @@
       <form #userForm = "ngForm">
         <div class="header">
           <div class="image">
-            <i class="fa fa-arrow-left" id="arrow-left" [style.display]="isStep3 ? 'block' : 'none'" (click)="back()"></i>
+            <i class="fa fa-arrow-left" id="arrow-left" [style.display]="isBackNeeded ? 'block' : 'none'" (click)="back()"></i>
             <i class="fa fa-twitter" id="twitter" [style.display]="isStep1 ? 'block' : 'none'" ></i>
           </div>
           <a class="btn btn-primary" id = "myButton" (click)="next({name:nameInput.value, email: emailInput.value, password: passwordInput.value,  userhandle: userhandleInput.value})" [style.background-color]="isFilled ? 'rgba(29,161,242,1.00)': 'babyblue'"  [style.display]="isStep1 ? 'block' : 'none'">Next</a>
