--- a/tweet-tweet/src/app/side-nav/side-nav.component.css
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.css
@@ -1,66 +1,118 @@
-.sidenav-container {
-  height: 100%;
+.sidenav{
+  background-color: white;
+  width: 32rem;
   border-right: 1px solid #cdcdcd;
 }
 
-.sidenav {
-  width: 36rem;
-  background-color: white;
-}
-.sidenav .mat-toolbar {
-  background: inherit;
+.sidenav-sub-container{
+  margin-left: 4.8rem;
 }
 
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+a{
+  margin-bottom: 0.5rem;
 }
-.mat-list-item{
-  margin-left: 55px;
-  font-size: 22px;
-  font-weight: 599;
-  color:rgba(0,0,0,0.842);
-  padding: 4rem 0;
-}
-.mat-list-item:hover{
-  color: rgba(29,161,242,1.00);
-  background-color: white;
-  /* border-radius: 20px; */
-  text-decoration: none;
 
-}
-.fa{
-  font-size: 30px;
-  font-weight: normal;
-}
-.fa-twitter{
-  font-size: 35px;
-  color: rgba(29,161,242,1.00);
-  
-}
-.mat-list-item span{
-  padding-left: 22px;
+span{
+  color: black;
+  font-weight: 640;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-  font-weight: bold;
+  font-size: 2rem;
 }
-.mat-list-second-title{
 
-  color: rgba(29,161,242,1.00);
+.fa-twitter{
+  color: #007bff;
+  font-size: 3rem;
+  padding: 0.7rem;
 }
+
+.fa-twitter:hover{
+  border-radius: 30px;
+  background-color: #F5F8FA;
+}
+
 .tweet-main-btn{
   background-color: rgba(29,161,242,1.00);
   border: none;
   color: white;
-  font-weight: 590;
+  font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
   padding: 15px 90px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 15px 48px ;
+  margin-top: 0.5rem;
   cursor: pointer;
   border-radius: 30px;
-  font-size:17px;
+  font-size: 14px;
+}
 
+.for-hover i{
+  width: 25px;
+}
+
+i{
+  margin-right: 2rem;
+  color: black;
+  font-size: 3rem;
+  font-weight: lighter;
+}
+
+.for-hover:hover{
+  background-color: #F5F8FA;
+  color: rgba(29,161,242,1.00);
+  border-radius: 30px;
+}
+
+.for-hover:hover i, .for-hover:hover span{
+  color: rgba(29,161,242,1.00);
+}
+
+/*-----------------------------------------------------------------------------------*/
+
+.icon{
+  font-size: 2.5rem;
+  padding: 1rem;
+}
+
+.special{
+  padding: 1rem 1.25rem 1rem 1.25rem;
+}
+
+.sidenav-small{
+  background-color: white;
+  width: 12rem;
+  border-right: 1px solid #cdcdcd;
+}
+
+.sidenav-sub-small-container{
+  margin-left: 2.5rem;
+}
+
+.icon:hover{
+  background-color: #F5F8FA;
+  color: rgba(29,161,242,1.00);
+  border-radius: 30px;
+}
+
+.fa-plus{
+  background-color: rgba(29,161,242,1.00);
+  border-radius: 30px;
+  color: white;
+}
+
+/*-----------------------------------------------------------------------------*/
+
+.page-title{
+  font-weight: bold;
+}
+
+.user-image{
+  height: 3.5rem;
+  width: 3.5rem;
+  object-fit: cover;
+  border-radius: 30px;
+  margin-right: 3rem;
+}
+
+.lower{
+  position: fixed;
+  bottom: 0;
 }
