--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container d-none d-xl-block">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [opened]="true">
+  <mat-sidenav #drawer mode="side" class="sidenav" fixedInViewport [opened]="true">
     <div class="sidenav-sub-container">
       <mat-nav-list>
         <a mat-list-item><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -14,14 +14,17 @@
       </mat-nav-list>
       <a class="tweet-main-btn btn">Tweet</a>
     </div>
-    
   </mat-sidenav>
+
+  <mat-sidenav-content>
+    <app-create-post></app-create-post>
+  </mat-sidenav-content>
 </mat-sidenav-container>
 
 <!--       FOR SMALLER SCREENS        -->
 
 <mat-sidenav-container class="sidenav-container d-none d-md-block d-lg-none d-none d-lg-block d-xl-none">
-  <mat-sidenav #drawer class="sidenav-small" fixedInViewport [opened]="true">
+  <mat-sidenav #drawer mode="side" class="sidenav-small" fixedInViewport [opened]="true">
     <div class="sidenav-sub-small-container">
       <mat-nav-list class="small-container">
         <a mat-list-item class="small"><i class="fa fa-twitter icon" aria-hidden="true"></i></a>
@@ -36,8 +39,11 @@
         <a mat-list-item class="small"><i class="fa fa-plus special" aria-hidden="true"></i></a>
       </mat-nav-list>
     </div>
-    
   </mat-sidenav>
+
+  <mat-sidenav-content>
+    <app-create-post></app-create-post>
+  </mat-sidenav-content>
 </mat-sidenav-container>
 
 <!--       For Mobile Devices         -->
@@ -49,7 +55,7 @@
       <span class="page-title">{{title}}</span>
     </div>
   </mat-toolbar>
-
+  <router-outlet></router-outlet>
   <mat-toolbar class="bg-white d-flex justify-content-around lower">
     <a><i class="fa fa-home icon"></i></a>
     <a><i class="fa fa-search icon"></i></a>
