--- a/tweet-tweet/src/app/sign-up/sign-up.component.html
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.html
@@ -22,19 +22,13 @@
       </div>
       <div class="step-two" [style.display]="isStep2 ? 'block' : 'none'">
         <h1 class="title">Customize your experience</h1> 
-        <div class="sub-title">
-          <h3 class="text">Personalized ads</h3>
-        </div>
-        <div class="content">
-          You will always see ads on Twitter based on your Twitter activity. When this setting is enabled, Twitter may further personalize ads from Twitter advertisers, on and off Twitter, by combining your Twitter activity with other online activity and information from our partners. 
-          <input type="checkbox" data-ng-model="rememberMe" class="pull-right mycheckbox" checked>
-        </div>
+        
         <div class="sub-title">
           <h3 class="text">Track where you see twitter content across the web</h3>
         </div>
         <div class="content">
           Twitter uses this data to personalize your experience. This web browsing history will never be stored with your name,email or phone number.
-          <input type="checkbox" data-ng-model="rememberMe" class="pull-right mycheckbox" checked>
+          <input type="checkbox" data-ng-model="twitter" class="pull-right mycheckbox" checked>
         </div>
         <div class="content-footer">
           For more details about these settings, visit the <a href="https://help.twitter.com/en/managing-your-account/new-account-settings">Help Center.</a>  
@@ -65,7 +59,7 @@
       <small class= "text-danger" [class.smallText]="passwordInput.valid || passwordInput.untouched">Password is required</small>
       
       <div class="footer" [style.display]="isStep3 ? 'block' : 'none'" >
-        <h3>By signing up, you agree to the <a>terms and conditions</a> and <a>Privacy Policy</a>, including <a>Cookie Use</a>. Others will be able to find you by email or phone number when provided. <a>Privacy options</a> </h3>
+        <h3 class="foot">By signing up, you agree to the <a>terms and conditions</a> and <a>Privacy Policy</a>, including <a>Cookie Use</a>. Others will be able to find you by email or phone number when provided. <a>Privacy options</a> </h3>
         <a class="btn btn-primary" id = "submitButton" (click)="submitHandler2({name:nameInput.value, email: emailInput.value, password: passwordInput.value, userhandle: userhandleInput.value})">Sign Up</a>
       </div>
     </div>
