--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -16,7 +16,7 @@
                 <div class="media-body">
                     <small class="text-muted pull-right">Just Now</small>
                   <h4 class="media-heading">@Anchal Hora</h4>
-                  <div>Every flower paint contrasting colors along the ground and bring joy to many. Their elegance and delicate touches have us all in awe and exhilaration. <a href="https://en.wikipedia.org/wiki/Flower">#flowers</a></div>
+                  <div class="content">Every flower paint contrasting colors along the ground and bring joy to many. Their elegance and delicate touches have us all in awe and exhilaration. <a href="https://en.wikipedia.org/wiki/Flower">#flowers</a></div>
                     <div class="image">
                         <img src="../../assets/Images/nice.jpg">
                     </div>
@@ -34,7 +34,7 @@
                 <div class="media-body">
                   <small class="text-muted pull-right">38 minutes ago</small>
                   <h4 class="media-heading">@Chetna Mongmaw</h4>
-                  <div>Mama was my greatest teacher, a teacher of compassion, love and fearlessness. If love is sweet as a flower, then my mother is that sweet flower of love.</div>
+                  <div class="content">Mama was my greatest teacher, a teacher of compassion, love and fearlessness. If love is sweet as a flower, then my mother is that sweet flower of love.</div>
                     <div class="image">
                         <img src="../../assets/Images/unnamed.jpg">
                     </div>
