--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container d-none d-xl-block">
+<mat-sidenav-container class="sidenav-container bg-white d-none d-xl-block">
   <mat-sidenav #drawer mode="side" class="sidenav" fixedInViewport [opened]="true">
     <div class="sidenav-sub-container">
       <mat-nav-list>
@@ -15,15 +15,17 @@
       <a class="tweet-main-btn btn">Tweet</a>
     </div>
   </mat-sidenav>
-
-  <mat-sidenav-content>
+  <mat-sidenav-content class="main-content-big">
+    <div class="align-self-center bg-white p-3 navigation-header">
+      <span class="page-title">Home</span>
+    </div>
     <app-create-post></app-create-post>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
 <!--       FOR SMALLER SCREENS        -->
 
-<mat-sidenav-container class="sidenav-container d-none d-md-block d-lg-none d-none d-lg-block d-xl-none">
+<mat-sidenav-container class="sidenav-container bg-white d-none d-md-block d-lg-none d-none d-lg-block d-xl-none">
   <mat-sidenav #drawer mode="side" class="sidenav-small" fixedInViewport [opened]="true">
     <div class="sidenav-sub-small-container">
       <mat-nav-list class="small-container">
@@ -41,7 +43,10 @@
     </div>
   </mat-sidenav>
 
-  <mat-sidenav-content>
+  <mat-sidenav-content class="main-content">
+    <div class="align-self-center p-3 navigation-header">
+      <span class="page-title">Home</span>
+    </div>
     <app-create-post></app-create-post>
   </mat-sidenav-content>
 </mat-sidenav-container>
@@ -62,4 +67,7 @@
     <a><i class="fa fa-bell-o icon"></i></a>
     <a><i class="fa fa-envelope-o icon"></i></a>
   </mat-toolbar>
+  <div>
+    <a><i class="fa fa-plus floating-btn"></i></a>
+  </div>
 </div>
